[workspace]
members = [
    "gpu-olap-core",
    "gpu-memory-manager",
    "gpu-kernel-compiler",
    "arrow-interop"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GPU OLAP Team"]
license = "MIT"

[workspace.dependencies]
# Arrow and Parquet
arrow = "53.0"
arrow-array = "53.0"
arrow-schema = "53.0"
arrow-buffer = "53.0"
parquet = "53.0"

# CUDA bindings
cuda-runtime-sys = "0.3"
cuda-driver-sys = "0.3"
cudarc = "0.11"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# SQL parsing
sqlparser = "0.52"

# Codegen
llvm-sys = "191.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Memory
crossbeam = "0.8"
parking_lot = "0.12"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Utilities
once_cell = "1.20"
dashmap = "6.1"
rayon = "1.10"
