[package]
name = "gpu-memory-manager"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

parking_lot.workspace = true
crossbeam.workspace = true
dashmap.workspace = true

arrow.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true

tokio.workspace = true
async-trait.workspace = true

[lib]
name = "gpu_memory_manager"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"
